[gd_scene load_steps=6 format=4 uid="uid://dqmqsq4sr7rqb"]

[ext_resource type="Script" path="res://scripts/location_scripts/kill_house.gd" id="1_501gc"]
[ext_resource type="TileSet" uid="uid://cyiqqth62kmo6" path="res://scenes/tilemap_resource.tres" id="2_hhrv2"]
[ext_resource type="PackedScene" uid="uid://l5ussyyufq1j" path="res://scenes/items_scenes/pills.tscn" id="3_xodyk"]
[ext_resource type="PackedScene" uid="uid://uegwd8nwapr8" path="res://scenes/items_scenes/bandage.tscn" id="4_mhau1"]
[ext_resource type="AudioStream" uid="uid://cpp2djbivhm35" path="res://assets/audio/music/beep.wav" id="5_wjdob"]

[node name="KillHouse" type="Node2D"]
script = ExtResource("1_501gc")
metadata/_edit_horizontal_guides_ = [1374.0, 1342.0, 1408.0, 1440.0, 1504.0]
metadata/_edit_vertical_guides_ = [579.0, 1218.0, -62.0, 66.0, 1090.0, 448.0, 704.0]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+/ycAAAALAAsAAAD+/ygAAAALAAwAAAD//ycAAAAMAAsAAAD//ygAAAAMAAwAAAD8/ycAAAALAAsAAAD8/ygAAAALAAwAAAD9/ycAAAAMAAsAAAD9/ygAAAAMAAwAAAD6/ycAAAALAAsAAAD6/ygAAAALAAwAAAD7/ycAAAAMAAsAAAD7/ygAAAAMAAwAAAD6/ykAAAALAAsAAAD6/yoAAAALAAwAAAD7/ykAAAAMAAsAAAD7/yoAAAAMAAwAAAD6/ysAAAALAAsAAAD6/ywAAAALAAwAAAD7/ysAAAAMAAsAAAD7/ywAAAAMAAwAAAD6/y0AAAALAAsAAAD6/y4AAAALAAwAAAD7/y0AAAAMAAsAAAD7/y4AAAAMAAwAAAD8/y0AAAALAAsAAAD8/y4AAAALAAwAAAD9/y0AAAAMAAsAAAD9/y4AAAAMAAwAAAD+/y0AAAALAAsAAAD+/y4AAAALAAwAAAD//y0AAAAMAAsAAAD//y4AAAAMAAwAAAD+/yUAAAALAAsAAAD+/yYAAAALAAwAAAD//yUAAAAMAAsAAAD//yYAAAAMAAwAAAD+/yMAAAALAAsAAAD+/yQAAAALAAwAAAD//yMAAAAMAAsAAAD//yQAAAAMAAwAAAD+/yEAAAALAAsAAAD+/yIAAAALAAwAAAD//yEAAAAMAAsAAAD//yIAAAAMAAwAAAD+/x8AAAALAAsAAAD+/yAAAAALAAwAAAD//x8AAAAMAAsAAAD//yAAAAAMAAwAAAAAAB8AAAALAAsAAAAAACAAAAALAAwAAAABAB8AAAAMAAsAAAABACAAAAAMAAwAAAACAB8AAAALAAsAAAACACAAAAALAAwAAAADAB8AAAAMAAsAAAADACAAAAAMAAwAAAAEAB8AAAALAAsAAAAEACAAAAALAAwAAAAFAB8AAAAMAAsAAAAFACAAAAAMAAwAAAAGAB8AAAALAAsAAAAGACAAAAALAAwAAAAHAB8AAAAMAAsAAAAHACAAAAAMAAwAAAAIAB8AAAALAAsAAAAIACAAAAALAAwAAAAJAB8AAAAMAAsAAAAJACAAAAAMAAwAAAAKAB8AAAALAAsAAAAKACAAAAALAAwAAAALAB8AAAAMAAsAAAALACAAAAAMAAwAAAAMAB8AAAALAAsAAAAMACAAAAALAAwAAAANAB8AAAAMAAsAAAANACAAAAAMAAwAAAAOAB8AAAALAAsAAAAOACAAAAALAAwAAAAPAB8AAAAMAAsAAAAPACAAAAAMAAwAAAAQAB8AAAALAAsAAAAQACAAAAALAAwAAAARAB8AAAAMAAsAAAARACAAAAAMAAwAAAASAB8AAAALAAsAAAASACAAAAALAAwAAAATAB8AAAAMAAsAAAATACAAAAAMAAwAAAAUAB8AAAALAAsAAAAUACAAAAALAAwAAAAVAB8AAAAMAAsAAAAVACAAAAAMAAwAAAAWAB8AAAALAAsAAAAWACAAAAALAAwAAAAXAB8AAAAMAAsAAAAXACAAAAAMAAwAAAAYAB8AAAALAAsAAAAYACAAAAALAAwAAAAZAB8AAAAMAAsAAAAZACAAAAAMAAwAAAAaAB8AAAALAAsAAAAaACAAAAALAAwAAAAbAB8AAAAMAAsAAAAbACAAAAAMAAwAAAAcAB8AAAALAAsAAAAcACAAAAALAAwAAAAdAB8AAAAMAAsAAAAdACAAAAAMAAwAAAAeAB8AAAALAAsAAAAeACAAAAALAAwAAAAfAB8AAAAMAAsAAAAfACAAAAAMAAwAAAAgAB8AAAALAAsAAAAgACAAAAALAAwAAAAhAB8AAAAMAAsAAAAhACAAAAAMAAwAAAAiAB8AAAALAAsAAAAiACAAAAALAAwAAAAjAB8AAAAMAAsAAAAjACAAAAAMAAwAAAAkAB8AAAALAAsAAAAkACAAAAALAAwAAAAlAB8AAAAMAAsAAAAlACAAAAAMAAwAAAD+/y8AAAALAAsAAAD+/zAAAAALAAwAAAD//y8AAAAMAAsAAAD//zAAAAAMAAwAAAD+/zEAAAALAAsAAAD+/zIAAAALAAwAAAD//zEAAAAMAAsAAAD//zIAAAAMAAwAAAD+/zMAAAALAAsAAAD+/zQAAAALAAwAAAD//zMAAAAMAAsAAAD//zQAAAAMAAwAAAD+/zUAAAALAAsAAAD+/zYAAAALAAwAAAD//zUAAAAMAAsAAAD//zYAAAAMAAwAAAAAADUAAAALAAsAAAAAADYAAAALAAwAAAABADUAAAAMAAsAAAABADYAAAAMAAwAAAACADUAAAALAAsAAAACADYAAAALAAwAAAADADUAAAAMAAsAAAADADYAAAAMAAwAAAAEADUAAAALAAsAAAAEADYAAAALAAwAAAAFADUAAAAMAAsAAAAFADYAAAAMAAwAAAAGADUAAAALAAsAAAAGADYAAAALAAwAAAAHADUAAAAMAAsAAAAHADYAAAAMAAwAAAAIADUAAAALAAsAAAAIADYAAAALAAwAAAAJADUAAAAMAAsAAAAJADYAAAAMAAwAAAAKADUAAAALAAsAAAAKADYAAAALAAwAAAALADUAAAAMAAsAAAALADYAAAAMAAwAAAAMADUAAAALAAsAAAAMADYAAAALAAwAAAANADUAAAAMAAsAAAANADYAAAAMAAwAAAAOADUAAAALAAsAAAAOADYAAAALAAwAAAAPADUAAAAMAAsAAAAPADYAAAAMAAwAAAAQADUAAAALAAsAAAAQADYAAAALAAwAAAARADUAAAAMAAsAAAARADYAAAAMAAwAAAASADUAAAALAAsAAAASADYAAAALAAwAAAATADUAAAAMAAsAAAATADYAAAAMAAwAAAAUADUAAAALAAsAAAAUADYAAAALAAwAAAAVADUAAAAMAAsAAAAVADYAAAAMAAwAAAAWADUAAAALAAsAAAAWADYAAAALAAwAAAAXADUAAAAMAAsAAAAXADYAAAAMAAwAAAAYADUAAAALAAsAAAAYADYAAAALAAwAAAAZADUAAAAMAAsAAAAZADYAAAAMAAwAAAAaADUAAAALAAsAAAAaADYAAAALAAwAAAAbADUAAAAMAAsAAAAbADYAAAAMAAwAAAAcADUAAAALAAsAAAAcADYAAAALAAwAAAAdADUAAAAMAAsAAAAdADYAAAAMAAwAAAAeADUAAAALAAsAAAAeADYAAAALAAwAAAAfADUAAAAMAAsAAAAfADYAAAAMAAwAAAAgADUAAAALAAsAAAAgADYAAAALAAwAAAAhADUAAAAMAAsAAAAhADYAAAAMAAwAAAAiADUAAAALAAsAAAAiADYAAAALAAwAAAAjADUAAAAMAAsAAAAjADYAAAAMAAwAAAAkADUAAAALAAsAAAAkADYAAAALAAwAAAAlADUAAAAMAAsAAAAlADYAAAAMAAwAAAAkACEAAAALAAsAAAAkACIAAAALAAwAAAAlACEAAAAMAAsAAAAlACIAAAAMAAwAAAAkACMAAAALAAsAAAAkACQAAAALAAwAAAAlACMAAAAMAAsAAAAlACQAAAAMAAwAAAAkACUAAAALAAsAAAAkACYAAAALAAwAAAAlACUAAAAMAAsAAAAlACYAAAAMAAwAAAAkADMAAAALAAsAAAAkADQAAAALAAwAAAAlADMAAAAMAAsAAAAlADQAAAAMAAwAAAAkADEAAAALAAsAAAAkADIAAAALAAwAAAAlADEAAAAMAAsAAAAlADIAAAAMAAwAAAAkAC8AAAALAAsAAAAkADAAAAALAAwAAAAlAC8AAAAMAAsAAAAlADAAAAAMAAwAAAAkAC0AAAALAAsAAAAkAC4AAAALAAwAAAAlAC0AAAAMAAsAAAAlAC4AAAAMAAwAAAAmAC0AAAALAAsAAAAmAC4AAAALAAwAAAAnAC0AAAAMAAsAAAAnAC4AAAAMAAwAAAAoAC0AAAALAAsAAAAoAC4AAAALAAwAAAApAC0AAAAMAAsAAAApAC4AAAAMAAwAAAAoACsAAAALAAsAAAAoACwAAAALAAwAAAApACsAAAAMAAsAAAApACwAAAAMAAwAAAAoACkAAAALAAsAAAAoACoAAAALAAwAAAApACkAAAAMAAsAAAApACoAAAAMAAwAAAAoACcAAAALAAsAAAAoACgAAAALAAwAAAApACcAAAAMAAsAAAApACgAAAAMAAwAAAAmACcAAAALAAsAAAAmACgAAAALAAwAAAAnACcAAAAMAAsAAAAnACgAAAAMAAwAAAAkACcAAAALAAsAAAAkACgAAAALAAwAAAAlACcAAAAMAAsAAAAlACgAAAAMAAwAAAAHACwAAAAGAAEAAAAHACsAAAAGAAIAAAAHACoAAAAGAAEAAAAHACkAAAAGAAIAAAAHACgAAAAGAAEAAAAHACcAAAAGAAIAAAAHACYAAAAGAAEAAAAHACUAAAAGAAIAAAAHACQAAAAAAAUAAAAHACMAAAAGAAIAAAAHACIAAAAGAAEAAAAHACEAAAAGAAIAAAAGACEAAAAIAAIAAAAFACEAAAAHAAIAAAAEACEAAAAGAAIAAAADACEAAAAIAAIAAAACACEAAAAHAAIAAAABACEAAAAGAAIAAAAAACEAAAAIAAIAAAAAACIAAAAIAAEAAAAAACMAAAAIAAIAAAAAACQAAAAIAAEAAAAAACUAAAAIAAIAAAAAACYAAAAIAAEAAAAAACcAAAAIAAIAAAAAACgAAAAIAAEAAAAAACkAAAAIAAIAAAD//ykAAAAHAAIAAAD+/ykAAAAGAAIAAAD9/ykAAAAIAAIAAAD8/ykAAAAHAAIAAAD8/yoAAAAHAAEAAAD8/ysAAAAHAAIAAAD8/ywAAAAHAAEAAAD9/ywAAAAIAAEAAAD9/ysAAAAIAAIAAAD9/yoAAAAIAAEAAAD+/yoAAAAGAAEAAAD+/ysAAAAGAAIAAAD+/ywAAAAGAAEAAAD//ywAAAAHAAEAAAD//ysAAAAHAAIAAAD//yoAAAAHAAEAAAAAACoAAAAIAAEAAAAAACsAAAAIAAIAAAAAACwAAAAIAAEAAAAAAC0AAAAIAAIAAAAAAC4AAAAIAAEAAAAAAC8AAAAIAAIAAAAAADAAAAAIAAEAAAAAADEAAAAIAAIAAAAAADIAAAAIAAEAAAAAADMAAAAIAAIAAAAAADQAAAAIAAEAAAABADQAAAAGAAEAAAABADMAAAAGAAIAAAABADIAAAAGAAEAAAABADEAAAAGAAIAAAABADAAAAAGAAEAAAABAC8AAAAGAAIAAAABAC4AAAAGAAEAAAABAC0AAAAGAAIAAAABACwAAAAGAAEAAAABACsAAAAGAAIAAAABACoAAAAGAAEAAAABACkAAAAGAAIAAAABACgAAAAGAAEAAAABACcAAAAGAAIAAAABACYAAAAGAAEAAAABACUAAAAGAAIAAAABACQAAAAGAAEAAAABACMAAAAGAAIAAAABACIAAAAGAAEAAAACACIAAAAHAAEAAAACACMAAAAHAAIAAAACACQAAAAAAAoAAAACACUAAAAHAAIAAAACACYAAAAHAAEAAAACACcAAAAHAAIAAAACACgAAAAHAAEAAAACACkAAAAHAAIAAAACACoAAAAHAAEAAAACACsAAAAHAAIAAAACACwAAAAHAAEAAAACAC0AAAAHAAIAAAACAC4AAAAHAAEAAAACAC8AAAAHAAIAAAACADAAAAAHAAEAAAACADEAAAAAAAUAAAACADIAAAAHAAEAAAACADMAAAAHAAIAAAACADQAAAAHAAEAAAADADQAAAAIAAEAAAADADMAAAAIAAIAAAADADIAAAAIAAEAAAADADEAAAABAAUAAAADADAAAAAIAAEAAAADAC8AAAAIAAIAAAADAC4AAAAIAAEAAAADAC0AAAAIAAIAAAADACwAAAAIAAEAAAADACsAAAAIAAIAAAADACoAAAAIAAEAAAADACkAAAAIAAIAAAADACgAAAAIAAEAAAADACcAAAAIAAIAAAADACYAAAAIAAEAAAADACUAAAAIAAIAAAADACQAAAABAAoAAAADACMAAAAIAAIAAAADACIAAAAIAAEAAAAEACIAAAABAAcAAAAEACMAAAABAAgAAAAEACQAAAAGAA4AAAAEACUAAAAGAAIAAAAEACYAAAAGAAEAAAAEACgAAAACAAgAAAAEACkAAAACAAgAAAAEACoAAAACAAgAAAAEACsAAAACAAgAAAAEACwAAAACAAgAAAAEAC0AAAACAAgAAAAEAC4AAAACAAsAAAAEAC8AAAAGAAIAAAAEADAAAAAGAAEAAAAEADEAAAAGAA0AAAAEADIAAAABAAgAAAAEADMAAAAGAAIAAAAEADQAAAAGAAEAAAAFADQAAAAHAAEAAAAFADMAAAAHAAIAAAAFADIAAAAHAAEAAAAFADEAAAAHAAIAAAAFADAAAAAHAAEAAAAFAC8AAAAHAAIAAAAFAC4AAAAHAAEAAAAFAC0AAAAHAAIAAAAFACwAAAAHAAEAAAAFACsAAAAHAAIAAAAFACoAAAAHAAEAAAAFACkAAAAHAAIAAAAFACgAAAAHAAEAAAAFACcAAAAHAAIAAAAFACYAAAAHAAEAAAAFACUAAAAHAAIAAAAFACQAAAAHAAEAAAAFACMAAAAHAAIAAAAFACIAAAAHAAEAAAAGACIAAAAIAAEAAAAGACMAAAAIAAIAAAAGACQAAAAIAAEAAAAGACUAAAAIAAIAAAAGACYAAAAIAAEAAAAGACcAAAAIAAIAAAAGACgAAAAIAAEAAAAGACkAAAAIAAIAAAAGACoAAAAIAAEAAAAGACsAAAAIAAIAAAAGACwAAAAIAAEAAAAGAC0AAAAIAAIAAAAGAC4AAAAIAAEAAAAGAC8AAAAIAAIAAAAGADAAAAAIAAEAAAAGADEAAAAIAAIAAAAGADIAAAAIAAEAAAAGADMAAAAIAAIAAAAGADQAAAAIAAEAAAAHADQAAAAGAAEAAAAHADMAAAAGAAIAAAAHADIAAAAGAAEAAAAHADEAAAAGAAIAAAAHADAAAAAGAAEAAAAHAC8AAAAGAAIAAAAHAC4AAAAGAAEAAAAHAC0AAAAGAAIAAAAIAC0AAAAHAAIAAAAIACwAAAAHAAEAAAAIACsAAAAHAAIAAAAIACoAAAAHAAEAAAAIACkAAAAHAAIAAAAIACgAAAAHAAEAAAAIACcAAAAHAAIAAAAIACYAAAAHAAEAAAAIACUAAAAHAAIAAAAIACQAAAABAAUAAAAIACMAAAAHAAIAAAAIACIAAAAHAAEAAAAIACEAAAAHAAIAAAAJACEAAAAIAAIAAAAJACIAAAAIAAEAAAAJACMAAAAIAAIAAAAJACQAAAABAAUAAAAJACUAAAAIAAIAAAAJACYAAAAIAAEAAAAJACcAAAAIAAIAAAAJACgAAAAAAAoAAAAJACkAAAAIAAIAAAAJACoAAAAIAAEAAAAJACsAAAAIAAIAAAAJACwAAAAIAAEAAAAJAC0AAAABAAcAAAAJAC4AAAABAAgAAAAIAC4AAAAHAAEAAAAIAC8AAAAHAAIAAAAIADAAAAAHAAEAAAAIADEAAAAHAAIAAAAIADIAAAAHAAEAAAAIADMAAAAHAAIAAAAIADQAAAAHAAEAAAAJADQAAAAIAAEAAAAJADMAAAAIAAIAAAAJADIAAAAIAAEAAAAJADEAAAAIAAIAAAAJADAAAAABAAkAAAAJAC8AAAABAAgAAAAKAC8AAAAGAAIAAAAKAC4AAAAGAAEAAAAKAC0AAAAGAAIAAAAKACwAAAAGAAEAAAAKACsAAAAGAAIAAAAKACoAAAAGAAEAAAAKACkAAAAGAAIAAAAKACgAAAABAAkAAAAKACcAAAABAAgAAAAKACYAAAABAAgAAAAKACUAAAABAAgAAAAKACQAAAAGAA0AAAAKACMAAAAGAAIAAAAKACIAAAAGAAEAAAAKACEAAAAGAAIAAAALACEAAAAHAAIAAAALACIAAAAHAAEAAAALACMAAAAHAAIAAAALACQAAAAHAAEAAAALACUAAAAHAAIAAAALACYAAAAHAAEAAAALACcAAAAHAAIAAAALACgAAAABAAoAAAALACkAAAAHAAIAAAALACoAAAAHAAEAAAALACsAAAAHAAIAAAALACwAAAAHAAEAAAALAC0AAAAHAAIAAAALAC4AAAAHAAEAAAALAC8AAAAHAAIAAAALADAAAAAEAAkAAAAKADAAAAADAAkAAAAKADEAAAAGAAIAAAAKADIAAAAGAAEAAAAKADMAAAAGAAIAAAAKADQAAAAGAAEAAAALADQAAAAHAAEAAAALADMAAAAHAAIAAAALADIAAAAHAAEAAAALADEAAAAHAAIAAAAMADAAAAAIAAEAAAAMAC8AAAAIAAIAAAAMAC4AAAAIAAEAAAAMAC0AAAAIAAIAAAAMACwAAAAIAAEAAAAMACsAAAAIAAIAAAAMACoAAAAIAAEAAAAMACkAAAAIAAIAAAAMACgAAAABAAoAAAAMACcAAAAIAAIAAAAMACYAAAAIAAEAAAAMACUAAAAIAAIAAAAMACQAAAAIAAEAAAAMACMAAAAIAAIAAAAMACIAAAAIAAEAAAAMACEAAAAIAAIAAAANACEAAAAGAAIAAAANACIAAAAGAAEAAAANACMAAAAGAAIAAAANACQAAAAGAAEAAAANACUAAAAGAAIAAAANACYAAAAGAAEAAAANACcAAAAGAAIAAAANACgAAAAEAAkAAAANACkAAAAGAAIAAAANACoAAAAGAAEAAAANACsAAAAGAAIAAAANACwAAAAGAAEAAAANAC0AAAAGAAIAAAANAC4AAAAGAAEAAAANAC8AAAAGAAIAAAANADAAAAAGAAEAAAANADIAAAABAAoAAAAMADIAAAAAAAoAAAAMADMAAAAIAAIAAAAMADQAAAAIAAEAAAANADQAAAAGAAEAAAANADMAAAAGAAIAAAAOADMAAAAHAAIAAAAOADIAAAABAAoAAAAOADAAAAAHAAEAAAAOAC8AAAAHAAIAAAAOAC4AAAAHAAEAAAAOAC0AAAAHAAIAAAAOACwAAAAHAAEAAAAOACsAAAAHAAIAAAAOACoAAAAHAAEAAAAOACkAAAAHAAIAAAAOACgAAAAHAAEAAAAOACcAAAAHAAIAAAAOACYAAAAHAAEAAAAOACUAAAAHAAIAAAAOACQAAAAHAAEAAAAOACMAAAAHAAIAAAAOACIAAAAHAAEAAAAOACEAAAAHAAIAAAAPACEAAAAIAAIAAAAPACIAAAAIAAEAAAAPACMAAAAIAAIAAAAPACQAAAAIAAEAAAAPACUAAAAIAAIAAAAPACYAAAAIAAEAAAAPACcAAAAIAAIAAAAPACgAAAAIAAEAAAAPACkAAAAIAAIAAAAPACoAAAAIAAEAAAAPACsAAAACAA0AAAAPACwAAAACAAgAAAAPAC0AAAACAAgAAAAPAC4AAAACAAgAAAAPAC8AAAACAA4AAAAPADAAAAAIAAEAAAAPADIAAAABAAoAAAAPADMAAAAIAAIAAAAPADQAAAAIAAEAAAAOADQAAAAHAAEAAAAQADQAAAAGAAEAAAAQADMAAAAGAAIAAAAQADIAAAABAAoAAAAQADAAAAAGAAEAAAAQAC8AAAAGAAoAAAAQAC4AAAAGAAEAAAAQAC0AAAAGAAIAAAAQACwAAAAGAAEAAAAQACsAAAAGAAQAAAAQACoAAAAGAAEAAAAQACkAAAAGAAIAAAAQACgAAAACAAsAAAAQACcAAAACAAgAAAAQACYAAAACAAgAAAAQACUAAAACAAgAAAAQACQAAAACAAgAAAAQACMAAAACAAcAAAAQACIAAAAGAAEAAAAQACEAAAAGAAIAAAARACEAAAAHAAIAAAARACIAAAAHAAEAAAARACMAAAAHAAIAAAARACQAAAAHAAEAAAARACUAAAAHAAIAAAARACYAAAAHAAEAAAARACcAAAAHAAIAAAARACgAAAAHAAEAAAARACkAAAAHAAIAAAARACoAAAAHAAEAAAARACsAAAAGAAQAAAARACwAAAAHAAEAAAARAC0AAAAHAAIAAAARAC4AAAAHAAEAAAARAC8AAAAGAAoAAAARADAAAAAHAAEAAAARADIAAAABAAoAAAARADMAAAAHAAIAAAARADQAAAAHAAEAAAASADQAAAAIAAEAAAASADMAAAAIAAIAAAASADIAAAABAAoAAAASADAAAAAIAAEAAAASAC8AAAAGAAoAAAASAC4AAAAIAAEAAAASAC0AAAAIAAIAAAASACwAAAAIAAEAAAASACsAAAAGAAQAAAASACoAAAAIAAEAAAASACkAAAAIAAIAAAASACgAAAAIAAEAAAASACcAAAAIAAIAAAASACYAAAAIAAEAAAASACUAAAAIAAIAAAASACQAAAAIAAEAAAASACMAAAAIAAIAAAASACIAAAAIAAEAAAASACEAAAAIAAIAAAATACEAAAAGAAIAAAATACIAAAAGAAEAAAATACMAAAACAAcAAAATACQAAAACAAgAAAATACUAAAACAAgAAAATACYAAAACAAgAAAATACcAAAACAAgAAAATACgAAAACAAsAAAATACkAAAAGAAIAAAATACoAAAAGAAEAAAATACsAAAAGAAQAAAATACwAAAAGAAEAAAATAC0AAAAGAAIAAAATAC4AAAAGAAEAAAATAC8AAAAGAAoAAAATADAAAAAGAAEAAAATADIAAAABAAoAAAATADMAAAAGAAIAAAATADQAAAAGAAEAAAAUADQAAAAHAAEAAAAUADMAAAAHAAIAAAAUADIAAAABAAoAAAAUADAAAAAHAAEAAAAUAC8AAAADAA4AAAAUAC4AAAABAAgAAAAUAC0AAAABAAgAAAAUACwAAAABAAgAAAAUACsAAAADAA0AAAAUACoAAAAHAAEAAAAUACkAAAAHAAIAAAAUACgAAAAHAAEAAAAUACcAAAAHAAIAAAAUACYAAAAHAAEAAAAUACUAAAAHAAIAAAAUACQAAAAHAAEAAAAUACMAAAAHAAIAAAAUACIAAAAHAAEAAAAUACEAAAAHAAIAAAAVACEAAAAIAAIAAAAVACIAAAAIAAEAAAAVACMAAAAIAAIAAAAVACoAAAAIAAEAAAAVACsAAAAIAAIAAAAVACwAAAAIAAEAAAAVAC0AAAAIAAIAAAAVAC4AAAAIAAEAAAAVAC8AAAAIAAIAAAAVADAAAAAIAAEAAAAVADIAAAABAAoAAAAVADMAAAAIAAIAAAAVADQAAAAIAAEAAAAWADQAAAAGAAEAAAAWADMAAAAGAAIAAAAWADIAAAABAAoAAAAWADAAAAAGAAEAAAAWAC8AAAAGAAIAAAAWAC4AAAAGAAEAAAAWAC0AAAAGAAIAAAAWACwAAAAGAAEAAAAWACsAAAAGAAIAAAAWACoAAAAGAAEAAAAWACMAAAAGAAIAAAAWACIAAAAGAAEAAAAWACEAAAAGAAIAAAAXACEAAAAHAAIAAAAXACIAAAAHAAEAAAAXACMAAAAHAAIAAAAXACoAAAAHAAEAAAAXACsAAAAHAAIAAAAXACwAAAAHAAEAAAAXAC0AAAAHAAIAAAAXAC4AAAAHAAEAAAAXAC8AAAAHAAIAAAAXADAAAAAHAAEAAAAXADIAAAAEAAkAAAAXADMAAAAHAAIAAAAXADQAAAAHAAEAAAAYADQAAAAIAAEAAAAYADMAAAAIAAIAAAAYADIAAAAIAAEAAAAYADEAAAAIAAIAAAAYADAAAAAAAAoAAAAYAC8AAAAIAAIAAAAYAC4AAAAIAAEAAAAYAC0AAAAIAAIAAAAYACwAAAAIAAEAAAAYACsAAAAIAAIAAAAYACoAAAAIAAEAAAAYACMAAAAIAAIAAAAYACIAAAAIAAEAAAAYACEAAAAIAAIAAAAZACEAAAAGAAIAAAAZACIAAAAGAAEAAAAZACMAAAAGAAIAAAAZACoAAAAGAAEAAAAZACsAAAAGAAIAAAAZACwAAAAGAAEAAAAZAC0AAAAGAAIAAAAZAC4AAAAGAAEAAAAZAC8AAAAGAAIAAAAZADAAAAABAAoAAAAZADEAAAAGAAIAAAAZADIAAAAGAAEAAAAZADMAAAAGAAIAAAAZADQAAAAGAAEAAAAaADQAAAAHAAEAAAAaADMAAAAHAAIAAAAaADIAAAAHAAEAAAAaADEAAAAHAAIAAAAaADAAAAACAAoAAAAaAC8AAAACAAgAAAAaAC4AAAACAAgAAAAaAC0AAAACAAcAAAAaACwAAAAHAAEAAAAaACsAAAAHAAIAAAAaACoAAAAHAAEAAAAaACMAAAAHAAIAAAAaACIAAAAHAAEAAAAaACEAAAAHAAIAAAAbACEAAAAIAAIAAAAbACIAAAAIAAEAAAAbACMAAAAIAAIAAAAbACoAAAAIAAEAAAAbACsAAAAIAAIAAAAbACwAAAAIAAEAAAAbAC0AAAAIAAIAAAAbAC4AAAAIAAEAAAAbAC8AAAAIAAIAAAAbADAAAAAIAAEAAAAbADEAAAAIAAIAAAAbADIAAAAIAAEAAAAbADMAAAAIAAIAAAAbADQAAAAIAAEAAAAcADQAAAAGAAEAAAAcADMAAAAGAAIAAAAcADIAAAAGAAEAAAAcADEAAAAGAAIAAAAcADAAAAAGAAEAAAAcAC8AAAAGAAIAAAAcAC4AAAAGAAEAAAAcAC0AAAAGAAIAAAAcACwAAAAGAAEAAAAcACsAAAAGAAIAAAAcACoAAAAGAAEAAAAcACMAAAAGAAIAAAAcACIAAAAGAAEAAAAcACEAAAAGAAIAAAAdACEAAAAHAAIAAAAdACIAAAAHAAEAAAAdACMAAAAHAAIAAAAdACQAAAAHAAEAAAAdACUAAAAHAAIAAAAdACYAAAAHAAEAAAAdACcAAAAHAAIAAAAdACgAAAAHAAEAAAAdACkAAAAHAAIAAAAdACoAAAAHAAEAAAAdACsAAAAHAAIAAAAdACwAAAAHAAEAAAAdAC0AAAAHAAIAAAAdAC4AAAAHAAEAAAAdAC8AAAAHAAIAAAAdADAAAAAHAAEAAAAdADEAAAAHAAIAAAAdADIAAAAHAAEAAAAdADMAAAAHAAIAAAAdADQAAAAHAAEAAAAeADQAAAAIAAEAAAAeADMAAAAIAAIAAAAeADIAAAAIAAEAAAAeADEAAAAIAAIAAAAeADAAAAAIAAEAAAAeAC8AAAAIAAIAAAAeAC4AAAAIAAEAAAAeAC0AAAAIAAIAAAAeACwAAAAIAAEAAAAeACsAAAAIAAIAAAAeACoAAAAIAAEAAAAeACkAAAAIAAIAAAAeACgAAAAIAAEAAAAeACcAAAAIAAIAAAAeACYAAAAIAAEAAAAeACUAAAAIAAIAAAAeACQAAAAIAAEAAAAeACMAAAAIAAIAAAAeACIAAAAIAAEAAAAeACEAAAAIAAIAAAAfACEAAAAGAAIAAAAfACIAAAACAAcAAAAfACMAAAACAAgAAAAfACQAAAAFAA4AAAAfACUAAAAGAAIAAAAfACYAAAAGAAEAAAAfACcAAAACAAcAAAAfACgAAAACAAgAAAAfACkAAAACAAgAAAAfACoAAAACAAgAAAAfACsAAAACAAgAAAAfACwAAAACAAgAAAAfAC0AAAACAAgAAAAfAC4AAAACAAsAAAAfAC8AAAAGAAIAAAAfADAAAAAGAAEAAAAfADEAAAAFAA0AAAAfADIAAAACAAgAAAAfADMAAAACAAsAAAAfADQAAAAGAAEAAAAgADQAAAAHAAEAAAAgADMAAAAHAAIAAAAgADIAAAAHAAEAAAAgADEAAAADAAYAAAAgADAAAAAHAAEAAAAgAC8AAAAHAAIAAAAgAC4AAAAHAAEAAAAgAC0AAAAHAAIAAAAgACwAAAAHAAEAAAAgACsAAAAHAAIAAAAgACoAAAAHAAEAAAAgACkAAAAHAAIAAAAgACgAAAAHAAEAAAAgACcAAAAHAAIAAAAgACYAAAAHAAEAAAAgACUAAAAHAAIAAAAgACQAAAADAAkAAAAgACMAAAAHAAIAAAAgACIAAAAHAAEAAAAgACEAAAAHAAIAAAAhACEAAAAIAAIAAAAhACIAAAAIAAEAAAAhACMAAAAIAAIAAAAhACQAAAAEAAkAAAAhACUAAAAIAAIAAAAhACYAAAAIAAEAAAAhACcAAAAIAAIAAAAhACgAAAAIAAEAAAAhACkAAAAIAAIAAAAhACoAAAAIAAEAAAAhACsAAAAIAAIAAAAhACwAAAAIAAEAAAAhAC0AAAAIAAIAAAAhAC4AAAAIAAEAAAAhAC8AAAAIAAIAAAAhADAAAAAIAAEAAAAhADEAAAAEAAYAAAAhADIAAAAIAAEAAAAhADMAAAAIAAIAAAAhADQAAAAIAAEAAAAiADQAAAAGAAEAAAAiADMAAAAGAAIAAAAiADIAAAAGAAEAAAAiADEAAAAGAAIAAAAiADAAAAAGAAEAAAAiAC8AAAAGAAIAAAAiAC4AAAAGAAEAAAAiAC0AAAAGAAIAAAAiACwAAAAGAAEAAAAiACsAAAAGAAIAAAAiACoAAAAGAAEAAAAiACkAAAAGAAIAAAAiACgAAAAGAAEAAAAiACcAAAAGAAIAAAAiACYAAAAGAAEAAAAiACUAAAAGAAIAAAAiACQAAAAGAAEAAAAiACMAAAAGAAIAAAAiACIAAAAGAAEAAAAiACEAAAAGAAIAAAAjACEAAAAHAAIAAAAjACIAAAAHAAEAAAAjACMAAAAHAAIAAAAjACQAAAAHAAEAAAAjACUAAAAHAAIAAAAjACYAAAAHAAEAAAAjACcAAAAHAAIAAAAjACgAAAAHAAEAAAAjACkAAAAHAAIAAAAjACoAAAAHAAEAAAAjACsAAAAHAAIAAAAjACwAAAAHAAEAAAAjAC0AAAAHAAIAAAAjAC4AAAAHAAEAAAAjAC8AAAAHAAIAAAAjADAAAAAHAAEAAAAjADEAAAAHAAIAAAAjADIAAAAHAAEAAAAjADMAAAAHAAIAAAAjADQAAAAHAAEAAAAkACwAAAAIAAEAAAAkACsAAAAIAAIAAAAkACoAAAAIAAEAAAAkACkAAAAIAAIAAAAlACkAAAAGAAIAAAAlACoAAAAGAAEAAAAlACsAAAAGAAIAAAAlACwAAAAGAAEAAAAmACwAAAAHAAEAAAAmACsAAAAHAAIAAAAmACoAAAAHAAEAAAAmACkAAAAHAAIAAAAnACkAAAAIAAIAAAAnACoAAAAIAAEAAAAnACsAAAAIAAIAAAAnACwAAAAIAAEAAAAEACcAAAACAAcAAAAVACQAAAAIAAEAAAAVACUAAAAIAAIAAAAVACYAAAAIAAEAAAAVACcAAAAIAAIAAAAVACgAAAAAAAoAAAAVACkAAAAIAAIAAAAWACQAAAAGAAEAAAAWACUAAAAGAAIAAAAWACYAAAAGAAEAAAAWACcAAAAGAAIAAAAWACgAAAABAAoAAAAWACkAAAAGAAIAAAAXACQAAAAHAAEAAAAXACUAAAAHAAIAAAAXACYAAAAHAAEAAAAXACcAAAAHAAIAAAAXACgAAAABAAoAAAAXACkAAAAHAAIAAAAYACQAAAAIAAEAAAAYACUAAAAIAAIAAAAYACYAAAAIAAEAAAAYACcAAAAIAAIAAAAYACgAAAABAAoAAAAYACkAAAAIAAIAAAAZACQAAAAFAA0AAAAZACUAAAACAAgAAAAZACYAAAACAAgAAAAZACcAAAACAAgAAAAZACgAAAACAAoAAAAZACkAAAACAAsAAAAaACQAAAADAAYAAAAaACUAAAAHAAIAAAAaACYAAAAHAAEAAAAaACcAAAAHAAIAAAAaACgAAAAHAAEAAAAaACkAAAAHAAIAAAAbACQAAAADAAYAAAAbACUAAAAIAAIAAAAbACYAAAAIAAEAAAAbACcAAAAIAAIAAAAbACgAAAAIAAEAAAAbACkAAAAIAAIAAAAcACQAAAAEAAYAAAAcACUAAAAGAAIAAAAcACYAAAAGAAEAAAAcACcAAAAGAAIAAAAcACgAAAAGAAEAAAAcACkAAAAGAAIAAAAMADEAAAAIAAIAAAANADEAAAAGAAIAAAAOADEAAAAHAAIAAAAPADEAAAAIAAIAAAAQADEAAAAGAAIAAAARADEAAAAHAAIAAAASADEAAAAIAAIAAAATADEAAAAGAAIAAAAUADEAAAAHAAIAAAAVADEAAAAIAAIAAAAWADEAAAAGAAIAAAAXADEAAAAHAAIAAAA=")
tile_set = ExtResource("2_hhrv2")

[node name="PlayerNodes" type="Node" parent="."]

[node name="PlayerSpawns" type="Node" parent="."]

[node name="PS1" type="Marker2D" parent="PlayerSpawns"]
position = Vector2(-62, 1342)

[node name="PS2" type="Marker2D" parent="PlayerSpawns"]
position = Vector2(-62, 1408)

[node name="PS3" type="Marker2D" parent="PlayerSpawns"]
position = Vector2(1218, 1342)

[node name="PS4" type="Marker2D" parent="PlayerSpawns"]
position = Vector2(1218, 1408)

[node name="WeaponSpawns" type="Node" parent="."]

[node name="WS1" type="Marker2D" parent="WeaponSpawns"]
position = Vector2(66, 1342)

[node name="WS2" type="Marker2D" parent="WeaponSpawns"]
position = Vector2(1090, 1342)

[node name="WS3" type="Marker2D" parent="WeaponSpawns"]
position = Vector2(66, 1408)

[node name="WS4" type="Marker2D" parent="WeaponSpawns"]
position = Vector2(1090, 1408)

[node name="ItemSpawns" type="Node" parent="."]

[node name="Pills" parent="." instance=ExtResource("3_xodyk")]
position = Vector2(384, 1248)

[node name="Pills2" parent="." instance=ExtResource("3_xodyk")]
position = Vector2(768, 1248)

[node name="Bandage" parent="." instance=ExtResource("4_mhau1")]
position = Vector2(448, 1408)

[node name="Bandage2" parent="." instance=ExtResource("4_mhau1")]
position = Vector2(448, 1504)

[node name="Bandage3" parent="." instance=ExtResource("4_mhau1")]
position = Vector2(704, 1408)

[node name="Bandage4" parent="." instance=ExtResource("4_mhau1")]
position = Vector2(704, 1504)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = 1312.0
offset_right = 64.0
offset_bottom = 1440.0
color = Color(0.00351917, 0.00351917, 0.00351917, 1)

[node name="CDLabel1" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 1088.0
offset_top = 1312.0
offset_right = 1184.0
offset_bottom = 1440.0
color = Color(0.00351917, 0.00351917, 0.00351917, 1)

[node name="CDLabel2" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wjdob")

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
